============================================================
=== 2016
1.9.1-pre
	add mlocarna option to realign; support 'consensus' constraint specifications

1.9.0 (2016-Dec-26)
	add mlocarna option to load (default) configuration from file
	add mlocarna option to read anchor constraints from
	  bed-format specification
	add option --maxBPspan (analogous to ViennaRNA's maxBPspan)
	activate penalized option for mlocarna
        update documentation of mlocarna
	update reliability-profile.pl: suppress too verbose output;
	  improve behavior of subseq option
	Tests:
	    introduce mlocarna test with comparison to reference results
	      -- generate reference results with make gen-test-results
	    add stockholm writing test
	Bug fixes:
	    catch empty sequence case for alifold
	    fix error message concerning max-diff-aln in mlocarna
	    fix mlocarna bug: write stockholm also in probabilistic mode
	    fix mlocarna error handling when running multithreaded
	    fix doxygen/docu generation
1.8.12 (2016-Dec-1)
	Add checks: multi-threaded mlocarna, locarnate
	Fix severe problem with threads in mlocarna, which caused hangs
	Fix mlocarna with sparse (precomputation of inloop probs)
	Update VRNA/C11 configuration (adapts automatically; remove --enable-STDC )
	Require ViennaRNA >=2.3.1
	Improved options help
	Cleanup some files in the repository and distribution
1.8.11 (2016-Aug-15)
	Add configure flag --enable-STDC; set default to C11 (RNAlib compatibility)
	Fix output order of reliable structures in mlocarna
	Migrate to new vrna api; fix pf_scale bug
1.8.10  (2016-Jul-15)
	Improve input checking in mlocarna
	Increase API version to 1.5
	Wrap long alifold consensus output in mlocarna
	Add consensus structure in locarna output, selectable types mea|alifold|none
	Add optional stockholm output to mlocarna
	Introduce quiet switch for locarna, locarna_p, sparse, and exparna_p
	Code cleanup in driver programs
	Handle sequence name clashes by systematic renaming