@@ -1,6 +1,7 @@
 ============================================================
 === 2016
 1.9.1-pre
+	fix exparna_p output
 	add mlocarna option to realign; support 'consensus' constraint specifications
 
 1.9.0 (2016-Dec-26)
